@@ -251,7 +251,8 @@ wxGTK:
   freedesktop.org's wm-spec (Mart Raudsepp)
 - wxEVT_CONTEXT_MENU is now generated for right mouse press, not release
 - implemented alpha channel support in wxBitmap
-- added native GTK+2  wxArtProvider implementation
+- added native GTK+2 wxArtProvider implementation with ability to load
+  icons from icon theme in addition to recognized stock art
 
 wxMotif:
 
